--- a/azure-pipelines-official.yml
+++ b/azure-pipelines-official.yml
@@ -227,9 +227,9 @@ stages:
         publishLocation: 'Container'
       displayName: Publish Linux tar
     - pwsh: |
-        Get-ChildItem $(Build.ArtifactStagingDirectory)
+        tar -czvf $(Build.ArtifactStagingDirectory)/source.tar.gz --transform 's,^\.\/,SerialLoops-$(Version)/,' .
         ((Get-Content -Path ./install/linux/rpm/rpmbuild/SPECS/SerialLoops.spec) -Replace '#VERSION#', '$(Version)') | Set-Content -Path ./install/linux/rpm/rpmbuild/SPECS/SerialLoops.spec
-        Copy-Item -Path $(Build.ArtifactStagingDirectory)/publish.tar.gz -Destination $(Build.SourcesDirectory)/install/linux/rpm/rpmbuild/SOURCES/SerialLoops-$(Version).tar.gz
+        Copy-Item -Path $(Build.ArtifactStagingDirectory)/source.tar.gz -Destination $(Build.SourcesDirectory)/install/linux/rpm/rpmbuild/SOURCES/SerialLoops-$(Version).tar.gz
         docker run -v $(Build.SourcesDirectory)/install/linux/rpm/rpm-scripts:/rpm-scripts -v $(Build.SourcesDirectory)/install/linux/rpm/rpmbuild:/root/rpmbuild fedora:39 /rpm-scripts/rpm-make.sh
       displayName: Build rpm
     - task: PublishBuildArtifacts@1
