Replace version in Windows installer

--- a/azure-pipelines-official.yml
+++ b/azure-pipelines-official.yml
@@ -256,6 +256,7 @@ stages:
     - pwsh: Expand-Archive -Path $(Build.ArtifactStagingDirectory)\Windows-v$(Version)\publish.zip -Destination $(Build.SourcesDirectory)\publish
       displayName: Unpack published artifacts
     - pwsh: |
+        ((Get-Content -Path $(Build.SourcesDirectory)\install\windows\serial-loops.iss) -replace '#VERSION#', '$(Version)') | Set-Content -Path $(Build.SourcesDirectory)\install\windows\serial-loops.iss
         Starts-BitsTransfer -Source https://haroohie.nyc3.cdn.digitaloceanspaces.com/bootstrap/serial-loops/iscc.zip -Destination $(Build.SourcesDirectory)\install\windows\iscc.zip
         Expand-Archive -Path $(Build.SourcesDirectory)\install\windows\iscc.zip -DestinationPath $(Build.SourcesDirectory)\install\windows\
         Starts-BitsTransfer -Source https://desktop.docker.com/win/main/amd64/Docker%20Desktop%20Installer.exe -Destination "$(Build.SourcesDirectory)\install\windows\Docker Desktop Installer.exe"
