Add devkitARM installer to windows installer

--- a/azure-pipelines-official.yml
+++ b/azure-pipelines-official.yml
@@ -259,6 +259,7 @@ stages:
         ((Get-Content -Path $(Build.SourcesDirectory)\install\windows\serial-loops.iss) -replace '#VERSION#', '$(Version)') | Set-Content -Path $(Build.SourcesDirectory)\install\windows\serial-loops.iss
         Starts-BitsTransfer -Source https://haroohie.nyc3.cdn.digitaloceanspaces.com/bootstrap/serial-loops/iscc.zip -Destination $(Build.SourcesDirectory)\install\windows\iscc.zip
         Expand-Archive -Path $(Build.SourcesDirectory)\install\windows\iscc.zip -DestinationPath $(Build.SourcesDirectory)\install\windows\
+        Starts-BitsTransfer -Source https://github.com/devkitPro/installer/releases/download/v3.0.3/devkitProUpdater-3.0.3.exe -Destination $(Build.SourcesDirectory)\install\windows\devkitProUpdater-3.0.3.exe
         Starts-BitsTransfer -Source https://desktop.docker.com/win/main/amd64/Docker%20Desktop%20Installer.exe -Destination "$(Build.SourcesDirectory)\install\windows\Docker Desktop Installer.exe"
       displayName: Download ISCC and Docker Desktop Installer
     - pwsh: $(Build.SourcesDirectory)\install\windows\iscc\ISCC.exe .\install\windows\serial-loops.iss
