Spell Start-BitsTransfer correctly

--- a/azure-pipelines-official.yml
+++ b/azure-pipelines-official.yml
@@ -255,12 +255,12 @@ stages:
       displayName: Download Windows zip artifact
     - pwsh: Expand-Archive -Path $(Build.ArtifactStagingDirectory)\Windows-v$(Version)\publish.zip -Destination $(Build.SourcesDirectory)\publish
       displayName: Unpack published artifacts
-    - powershell: |
+    - pwsh: |
         ((Get-Content -Path $(Build.SourcesDirectory)\install\windows\serial-loops.iss) -replace '#VERSION#', '$(Version)') | Set-Content -Path $(Build.SourcesDirectory)\install\windows\serial-loops.iss
-        Starts-BitsTransfer -Source https://haroohie.nyc3.cdn.digitaloceanspaces.com/bootstrap/serial-loops/iscc.zip -Destination $(Build.SourcesDirectory)\install\windows\iscc.zip
+        Start-BitsTransfer -Source https://haroohie.nyc3.cdn.digitaloceanspaces.com/bootstrap/serial-loops/iscc.zip -Destination $(Build.SourcesDirectory)\install\windows\iscc.zip
         Expand-Archive -Path $(Build.SourcesDirectory)\install\windows\iscc.zip -DestinationPath $(Build.SourcesDirectory)\install\windows\
-        Starts-BitsTransfer -Source https://github.com/devkitPro/installer/releases/download/v3.0.3/devkitProUpdater-3.0.3.exe -Destination $(Build.SourcesDirectory)\install\windows\devkitProUpdater-3.0.3.exe
-        Starts-BitsTransfer -Source https://desktop.docker.com/win/main/amd64/Docker%20Desktop%20Installer.exe -Destination "$(Build.SourcesDirectory)\install\windows\Docker Desktop Installer.exe"
+        Start-BitsTransfer -Source https://github.com/devkitPro/installer/releases/download/v3.0.3/devkitProUpdater-3.0.3.exe -Destination $(Build.SourcesDirectory)\install\windows\devkitProUpdater-3.0.3.exe
+        Start-BitsTransfer -Source https://desktop.docker.com/win/main/amd64/Docker%20Desktop%20Installer.exe -Destination "$(Build.SourcesDirectory)\install\windows\Docker Desktop Installer.exe"
       displayName: Download ISCC and Docker Desktop Installer
     - pwsh: $(Build.SourcesDirectory)\install\windows\iscc\ISCC.exe .\install\windows\serial-loops.iss
       displayName: Compile Windows installer
