Rename jobs to reflect tarball

--- a/azure-pipelines-official.yml
+++ b/azure-pipelines-official.yml
@@ -219,13 +219,13 @@ stages:
         Push-Location $(Build.ArtifactStagingDirectory)/publish
         tar -czvf ../publish.tar.gz --transform 's,^\.\/,SerialLoops-$(Version)/,' .
         Pop-Location
-      displayName: Create tar
+      displayName: Create tarball
     - task: PublishBuildArtifacts@1
       inputs:
         PathtoPublish: '$(Build.ArtifactStagingDirectory)/publish.tar.gz'
         ArtifactName: 'Linux-v$(Version)-tar'
         publishLocation: 'Container'
-      displayName: Publish Linux tar
+      displayName: Publish Linux tarball
     - pwsh: |
         tar -czvf $(Build.ArtifactStagingDirectory)/source.tar.gz --transform 's,^\.\/,SerialLoops-$(Version)/,' .
         ((Get-Content -Path ./install/linux/rpm/rpmbuild/SPECS/SerialLoops.spec) -Replace '#VERSION#', '$(Version)') | Set-Content -Path ./install/linux/rpm/rpmbuild/SPECS/SerialLoops.spec
@@ -238,7 +238,7 @@ stages:
         ArtifactName: 'Linux-v$(Version)-rpm'
         publishLocation: 'Container'
       displayName: Publish Linux rpm
-    displayName: Package Linux tar & build Linux rpm package
+    displayName: Package Linux tarball & build Linux rpm package
 
   - job:
     pool:
@@ -281,7 +281,7 @@ stages:
     displayName: Create Pre-Release
     steps:
     - task: DownloadBuildArtifacts@0
-      displayName: Download Linux tar
+      displayName: Download Linux tarball
       inputs:
         buildType: 'current'
         downloadType: 'single'
@@ -362,7 +362,8 @@ stages:
     #       Additionally, to test the game you will need to have a Nintendo DS emulator installed. We recommend [melonDS](https://melonds.kuribo64.net/) for its accuracy.
 
     #       ### Windows
-    #       There is currently no Windows installer; instead, you simply download the zip and run the application directly. Because our application contacts GitHub's servers to check for new releases on lauch, it is possible it will get flagged by firewall software &ndash; please allow it through so it can function correctly.
+    #       There is currently no Windows installer; instead, you simply download the zip and run the application directly.
+    #       Because our application contacts GitHub's servers to check for new releases on lauch, it is possible it will get flagged by firewall software &ndash; please allow it through so it can function correctly.
 
     #       ### macOS
     #       On macOS, after dragging the app from the dmg into Applications, please run `xattr -cr "/Applications/Serial Loops.app"` from the Terminal in order to be able to run the app. This is required because we currently don't codesign the application, meaning macOS will refuse to run it without explicit approval from you.
