--- a/azure-pipelines-official.yml
+++ b/azure-pipelines-official.yml
@@ -340,8 +340,8 @@ stages:
         Move-Item -Path $(Build.ArtifactStagingDirectory)/Linux-v$(Version)-tar/publish.tar.gz -Destination $(Build.ArtifactStagingDirectory)/SerialLoops-linux-x64-v$(Version).tar.gz
         Move-Item -Path $(Build.ArtifactStagingDirectory)/Linux-v$(Version)-deb/SerialLoops.deb -Destination $(Build.ArtifactStagingDirectory)/SerialLoops-$(Version)_amd64.deb
         Move-Item -Path $(Build.ArtifactStagingDirectory)/Linux-v$(Version)-rpm/SerialLoops-$(Version)-1.fc39.x86_64.rpm -Destination $(Build.ArtifactStagingDirectory)/SerialLoops-$(Version)-1.fc39.x86_64.rpm
-        Move-Item -Path "$(Build.ArtifactStagingDirectory)/macOS-x64-v$(Version)/SerialLoops.pkg" -Destination $(Build.ArtifactStagingDirectory)/SerialLoops-macOS-x64-v$(Version).pkg
-        Move-Item -Path "$(Build.ArtifactStagingDirectory)/macOS-arm-v$(Version)/SerialLoops.pkg" -Destination $(Build.ArtifactStagingDirectory)/SerialLoops-macOS-arm-v$(Version).pkg
+        Move-Item -Path "$(Build.ArtifactStagingDirectory)/macOS-x64-v$(Version)-installer/SerialLoops.pkg" -Destination $(Build.ArtifactStagingDirectory)/SerialLoops-macOS-x64-v$(Version).pkg
+        Move-Item -Path "$(Build.ArtifactStagingDirectory)/macOS-arm-v$(Version)-installer/SerialLoops.pkg" -Destination $(Build.ArtifactStagingDirectory)/SerialLoops-macOS-arm-v$(Version).pkg
         Move-Item -Path $(Build.ArtifactStagingDirectory)/Windows-v$(Version)/publish.zip -Destination $(Build.ArtifactStagingDirectory)/SerialLoops-windows-x64-v$(Version).zip
         Move-Item -Path $(Build.ArtifactStagingDirectory)/Windows-v$(Version)-installer/SerialLoopsInstaller.exe -Destination $(Build.ArtifactStagingDirectory)/SerialLoops-windows-x64-v$(Version).exe
       displayName: Move and rename artifacts
