Some initial flatpak work, maybe fix the pkg installer

--- a/install/linux/flatpak/club.haroohie.SerialLoops.yml
+++ b/install/linux/flatpak/club.haroohie.SerialLoops.yml
@@ -23,6 +23,8 @@ modules:
     build-commands:
     - /usr/lib/sdk/dotnet8/bin/install.sh
 
+  - name: devkit
+
   - name: SerialLoops
     buildsystem: simple
     sources:
