--- a/azure-pipelines-official.yml
+++ b/azure-pipelines-official.yml
@@ -152,20 +152,21 @@ stages:
       displayName: Publish macOS pkg installer
     displayName: Build macOS pkg installer
 
-  # - job:
-  #   pool:
-  #     vmImage: ubuntu-latest
-  #   steps:
-  #   - checkout: self
-  #     clean: true
-  #   - task: DownloadBuildArtifacts@0
-  #     inputs:
-  #       buildType: 'current'
-  #       downloadType: 'single'
-  #       artifactName: 'Linux-v$(Version)'
-  #       downloadPath: '$(Build.ArtifactStagingDirectory)'
-  #     displayName: Download Linux zip artifact
-  #   displayName: Build Linux flatpak
+  - job:
+    pool:
+      vmImage: ubuntu-latest
+    steps:
+    - checkout: self
+      clean: true
+    - script: apt install -y flatpak-builder
+      displayName: Install flatpak-builder
+    - script: |
+        cp -r install/linux/flatpak $(Agent.Work)
+        cd install/linux/flatpak
+        flatpak-builder build-dir --user --instal-deps-from=flathub --download-only club.haroohie.SerialLoops.yaml
+        python flatpak-dotnet-generator.py --dotnet 8 --freedesktop 23.08 nuget-sources.json SerialLoops/src/SerialLoops/SerialLoops.csproj
+        flatpak-builder build-dir --user --force-clean --install --repo=repo
+    displayName: Build Linux flatpak
 
   - job:
     pool:
