--- a/azure-pipelines-official.yml
+++ b/azure-pipelines-official.yml
@@ -138,7 +138,7 @@ stages:
         cd install/macos/
         mkdir "Serial Loops.app"
         cp -r $SLApp/* "./Serial Loops.app/"
-        ls -l
+        chmod +x "./Serial Loops.app/Contents/MacOS/SerialLoops"
         python serial_loops_pkg_builder.py $SLVersion
       env:
         SLVersion: $(Version)
@@ -155,7 +155,7 @@ stages:
   - job:
     pool:
       vmImage: ubuntu-latest
-    container: freedesktopsdk/flatpak
+    container: freedesktopsdk/flatpak:latest
     steps:
     - checkout: self
       clean: true
