--- a/azure-pipelines-official.yml
+++ b/azure-pipelines-official.yml
@@ -162,9 +162,10 @@ stages:
     - script: |
         cp -r install/linux/flatpak/* $(Agent.BuildDirectory)/
         cd $(Agent.BuildDirectory)
-        flatpak-builder build-dir --install-deps-from=flathub --download-only club.haroohie.SerialLoops.yaml
+        flatpak remote-add --user --if-not-exists flathub https://flathub.org/repo/flathub.flatpakrepo
+        flatpak-builder build-dir --user --install-deps-from=flathub --download-only club.haroohie.SerialLoops.yaml
         python flatpak-dotnet-generator.py --dotnet 8 --freedesktop 23.08 nuget-sources.json SerialLoops/src/SerialLoops/SerialLoops.csproj
-        flatpak-builder build-dir --force-clean --install --repo=repo club.haroohie.SerialLoops.yaml
+        flatpak-builder build-dir --user --force-clean --install --repo=repo club.haroohie.SerialLoops.yaml
         flatpak build-bundle ./repo SerialLoops.flatpak club.haroohie.SerialLoops
       displayName: Build flatpak
     - task: PublishBuildArtifacts@1
