--- a/.github/workflows/official-build.yml
+++ b/.github/workflows/official-build.yml
@@ -14,7 +14,24 @@ on:
         required: true
         type: string
 jobs:
+  flatpak-setup:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check out
+        uses: actions/checkout@v4
+      - name: Setup Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.13'
+      - run: python install/linux/flatpak/flatpak-dotnet-generator.py --dotnet 8 --freedesktop 23.08 nuget-sources.json src/SerialLoops/SerialLoops.csproj
+      - name: Publish nuget-sources.json
+        uses: actions/upload-artifact@v4
+        with:
+          name: nuget-sources
+          path: nuget-sources.json
+          retention-days: 1
   flatpak:
+    needs: flatpak-setup
     runs-on: ubuntu-latest
     container:
       image: bilelmoussaoui/flatpak-github-actions:freedesktop-23.08
@@ -22,11 +39,10 @@ jobs:
     steps:
       - name: Check out
         uses: actions/checkout@v4
-      - name: Setup Python
-        uses: actions/setup-python@v5
+      - name: Download nuget-sources.json
+        uses: actions/download-artifact@v4.1.8
         with:
-          python-version: '3.13.0'
-      - run: python install/linux/flatpak/flatpak-dotnet-generator.py --dotnet 8 --freedesktop 23.08 nuget-sources.json src/SerialLoops/SerialLoops.csproj
+          name: nuget-sources
       - name: Build flatpak
         uses: flatpak/flatpak-github-actions@v6
         with:
