--- a/.github/workflows/official-build.yml
+++ b/.github/workflows/official-build.yml
@@ -23,6 +23,7 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: '3.13'
+      - run: pip install requests
       - run: python install/linux/flatpak/flatpak-dotnet-generator.py --dotnet 8 --freedesktop 23.08 nuget-sources.json src/SerialLoops/SerialLoops.csproj
       - name: Publish nuget-sources.json
         uses: actions/upload-artifact@v4
