Fixup a few problems

--- a/.github/workflows/official-build.yml
+++ b/.github/workflows/official-build.yml
@@ -48,6 +48,7 @@ jobs:
         uses: actions/download-artifact@v4.1.8
         with:
           name: nuget-sources
+          path: install/linux/flatpak/
       - name: Build flatpak
         uses: flatpak/flatpak-github-actions/flatpak-builder@v6
         with:
