--- a/.github/workflows/official-build.yml
+++ b/.github/workflows/official-build.yml
@@ -65,7 +65,7 @@ jobs:
     runs-on: macos-latest
     strategy:
       matrix:
-        rid: ['osx-x64', 'osx-arm']
+        rid: ['osx-x64', 'osx-arm64']
     steps:
       - name: Check out
         uses: actions/checkout@v4
