--- a/.github/workflows/official-build.yml
+++ b/.github/workflows/official-build.yml
@@ -85,7 +85,7 @@ jobs:
         run: |
           cd install/macos/
           mkdir "Serial Loops.app"
-          cp -r src/SerialLoops/bin/Release/net8.0/${{ matrix.rid }}/publish/Serial Loops.app/* "./Serial Loops.app/"
+          cp -r "src/SerialLoops/bin/Release/net8.0/${{ matrix.rid }}/publish/Serial Loops.app/*" "./Serial Loops.app/"
           chmod +x "./Serial Loops.app/Contents/MacOS/SerialLoops"
           python serial_loops_pkg_builder.py $SLVersion
       - name: Upload pkg installer
