--- a/.github/workflows/official-build.yml
+++ b/.github/workflows/official-build.yml
@@ -84,6 +84,7 @@ jobs:
       - name: Build pkg installer
         run: |
           mkdir "install/macos/Serial Loops.app"
+          ls -l src/SerialLoops/bin/Release/net8.0/${{ matrix.rid }}/publish
           cp -r "src/SerialLoops/bin/Release/net8.0/${{ matrix.rid }}/publish/Serial Loops.app/*" "install/macos/Serial Loops.app/"
           cd install/macos/
           chmod +x "./Serial Loops.app/Contents/MacOS/SerialLoops"
