--- a/.github/workflows/official-build.yml
+++ b/.github/workflows/official-build.yml
@@ -77,6 +77,7 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: '3.13'
+      - run: pip install macos-pkg-builder
       - name: Restore
         run: dotnet restore src/SerialLoops/SerialLoops.csproj -r ${{ matrix.rid }}
       - name: Build .app
